<resources>
    <string name="app_name">RideMyRoute</string>
    <string name="url_privacy_policy" translatable="false">https://www.iubenda.com/privacy-policy/8153763 </string>
    <string name="url_faq">http://socialcar-project.eu/faq-en</string>
    <string name="url_contact_us">http://socialcar-project.eu/contact</string>
    <string name="url_terms">http://socialcar-project.eu/terms-en</string>
    <string name="google_maps_key" translatable="false">AIzaSyBMgvaT2c6WM_7a9ZCzELiDLQicAJ9ExFs</string>
    <string name="facebook_app_id" translatable="false">1942140106005270</string>
    <string name="mapquest_api_key" translatable="false">GA5qEzCxhpCAGMP7rlGNGRH9W0NBHxlc</string>
    <string name="trip_solution_current_trips">Current found trips</string>
    <string name="trip_solution_current_tripRequest">Current TripRequest</string>
    <string name="password">Password</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="your_personal_info">Other info</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="error_filled_field">Fill all mandatory fields correctly</string>
    <string name="choose">Select</string>
    <string name="step">Step</string>
    <string name="of">of</string>
    <string name="complete_signup">Complete Registration</string>
    <string name="min6">Min 6 chars</string>
    <string name="social">Social</string>
    <string name="social_description">Unlock more features\nconnecting your facebook or google account!\</string>
    <string name="new_driver_message">It looks like you\'re not\nregistered as a driver.</string>
    <string name="add_car">Add a car</string>
    <string name="become_a_driver">Become a driver</string>
    <string name="error_enable_permission_app">Enable all permission for this app</string>
    <string name="path">Path</string>
    <string name="set_starting_point">Set starting point</string>
    <string name="starting_point">Starting point</string>
    <string name="set_destination_point">Set destination point</string>
    <string name="destination_point">Destination point</string>
    <string name="search_solutions">Search solutions</string>
    <string name="label_continue">Continue</string>
    <string name="hint_insert_starting">Insert starting address</string>
    <string name="hint_insert_destination">Insert destination address</string>
    <string name="start_point_not_setted">Set the start point</string>
    <string name="note">Note</string>
    <string name="tab_title_passenger">PASSENGER</string>
    <string name="tab_title_driver">DRIVER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user_already_created">User already exists! Please try another one.</string>
    <string name="no_solutions_found">No solutions found.\nPlease try again.</string>
    <string name="driver">Driver</string>
    <string name="solutions_toolbar_label">Solutions</string>
    <string name="waiting_time_toolbar_label">Waiting time</string>
    <string name="solutions_details_toolbar_label">Details</string>
    <string name="accept_lift_toolbar_label">Lift Request</string>
    <string name="solutions_filters_label">Filters</string>
    <string name="solutions_departure_time_label">Departure: NOW</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="feedback_not_complete_error">Please answer all questions in this survey.</string>
    <string name="generic_error">Something went wrong.\nPlease try again.</string>
    <string name="no_connection_error">Check your internet connection\nand try again.</string>
    <string name="unauthorized_error">An error occurred!</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="forgot_password_msg">Please send us an email to &lt;a href="http://socialcar-project.eu/contact">Contact Us&lt;/a></string>
    <string name="signup">Sign up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signin">Sign in</string>
    <string name="no_rout_found">No route found</string>
    <string name="signin_facebook">Sign in with Facebook</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="have_account">Already have an account?</string>
    <string name="signin_by_email">Sign in by email</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_password">Insert password</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="social_sign_in_or">OR</string>
    <string name="or">OR</string>
    <string name="car_info">Car Info</string>
    <string name="additional_info">Additional Info</string>
    <string name="model">Model</string>
    <string name="car_plate">Car Plate</string>
    <string name="plate">Plate</string>
    <string name="food_allowed">Food allowed</string>
    <string name="smoking_allowed">Smoking allowed</string>
    <string name="car_photos">Car photo</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="pets_allowed">Pets allowed</string>
    <string name="luggage_allowed">Luggage allowed</string>
    <string name="child_seat">Child seat</string>
    <string name="colour">Color</string>
    <string name="select_colour">Select color</string>
    <string name="seat">Seats</string>
    <string name="message_progress_dialog">Loading&#8230;</string>
    <string name="send_request">Send request</string>
    <string name="book_now">Book now</string>
    <string name="lift_request">Lift Request</string>
    <string name="trip_accepted">Trip accepted</string>
    <string name="trip_declined">Trip declined</string>
    <string name="trip_cancelled">Trip cancelled</string>
    <string name="accept_lift">Accept</string>
    <string name="decline_lift">Decline</string>
    <string name="declined">Declined</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="at_what_hour">\@</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="myLifts">My Trips</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="privacy">Privacy policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="logout_dialog_text">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="trip_status_msg">Please leave a feedback</string>
    <string name="tab_title_lift_requested">REQUESTED</string>
    <string name="tab_title_lift_offered">OFFERED</string>
    <string name="active_trip">Active Trip</string>
    <string name="cancelled_trip">Cancelled Trip</string>
    <string name="completed_trip">The trip is completed</string>
    <string name="pending_trip">Pending Trip</string>
    <string name="declined_trip">Declined Trip</string>
    <string name="message_cancelled_trip">The trip was cancelled.</string>
    <string name="text_no_trips_found">No trips were found.\n</string>
    <string name="text_became_new_driver">It looks like you are not\nregistered as a driver.</string>
    <string name="search_for_trips">Search for trips</string>
    <string name="btn_become_driver">Become a driver</string>
    <string name="offer_trip">Offer a trip</string>
    <string name="google_play_service_error">Google Play Service Error. Try again.</string>
    <string name="google_play_service_not_available">Google Play Services not available.</string>
    <string name="status">Status:</string>
    <string name="lift_status_pending_message">didn\'t answer yet</string>
    <string name="lift_status_accepted_message">accepted your lift request</string>
    <string name="lift_status_decline_message">declined your lift request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="cancel_request_confirmation_text">Do you want to cancel the lift?</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
    <string name="pending_lift_title">Pending trip</string>
    <string name="active_lift_title">Active trip</string>
    <string name="completed_lift_title">Completed trip</string>
    <string name="cancelled_lift_title">Cancelled trip</string>
    <string name="declined_lift_title">Declined trip</string>
    <string name="invalid_search_ride_input">Invalid starting or destination point</string>
    <string name="enter_trip_name">Enter trip name</string>
    <string name="create_ride">Create</string>
    <string name="toolbar_label_new_trip">New Trip</string>
    <string name="pick_image_intent_text">Profile photo</string>
    <string name="login_info">Login info</string>
    <string name="error_upload_picture">An error occurred while uploading the picture</string>
    <string name="delete_ride_dialog_title">Delete trip?</string>
    <string name="update_ride_dialog_title">Disable trip?</string>
    <string name="ride_dialog_body_message">If you have any passengers associated with this active trip, they will be notified.</string>
    <string name="trip_deleted">Trip deleted</string>
    <string name="undo_snackbar">UNDO</string>
    <string name="delete_trip">DELETE TRIP</string>
    <string name="ride_message">When you\'ll accept a lift request for this trip, the passenger avatar will be displayed in this area.</string>
    <string name="click_to_add_ride">To create a new trip, tap on the \"+\" button</string>
    <string name="at_date">at</string>
    <string name="on_date">of</string>
    <string name="ride_activated">Trip activated</string>
    <string name="ride_disabled">Trip disabled</string>
    <string name="rating">Rating</string>
    <string name="wheelchair">Wheelchair, Blind</string>
    <string name="public_feedback">In order to help the other users, your feedback will be public.</string>
    <string name="ask_survey_text">Help the other users. Tell us more about %1$s\'s driving ability by taking this quick survey.</string>
    <string name="not_now">NOT NOW</string>
    <string name="carpooling">Carpooling</string>
    <string name="subway">Subway</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="tram">Tram</string>
    <string name="preferred_traveling_mode">Preferred mode</string>
    <string name="sort_solutions_by">Sort solutions by</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="report_category_traffic">Traffic</string>
    <string name="report_category_works">Works</string>
    <string name="report_category_accident">Accident</string>
    <string name="report_severity_low">Low</string>
    <string name="report_severity_medium">Medium</string>
    <string name="report_severity_high">High</string>
    <string name="report_next_button">Next</string>
    <string name="send_report_title">Send Report</string>
    <string name="send_report_position_from">From</string>
    <string name="send_report_position_to">To (Optional)</string>
    <string name="send_report_button">Send</string>
    <string name="insert_address">Insert address</string>
    <string name="cheapest_route">Cheapest</string>
    <string name="fastest_route">Fastest</string>
</resources>