<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_login_bg"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/main_toolbar" />

        <ImageView
            android:id="@+id/imageViewLogInLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_toolbar"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/img_login_logo" />

        <LinearLayout
            android:id="@+id/signin_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewLogInLogo"
            android:layout_marginLeft="@dimen/s_spacing"
            android:layout_marginRight="@dimen/s_spacing"
            android:layout_marginTop="46dp"
            android:background="@drawable/card_white"
            android:orientation="vertical"
            android:padding="@dimen/s_spacing"
            android:paddingLeft="@dimen/s_spacing"
            android:paddingRight="@dimen/s_spacing">

            <EditText
                android:id="@+id/email"
                style="@style/list_item_undefined_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_height"
                android:layout_marginTop="@dimen/m_spacing"
                android:backgroundTint="#cecece"
                android:drawableLeft="@drawable/ic_email_24dp"
                android:drawablePadding="@dimen/s_spacing"
                android:drawableStart="@drawable/ic_email_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/list_item_undefined_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_height"
                android:layout_marginBottom="@dimen/m_spacing"
                android:backgroundTint="#ffffff"
                android:drawableLeft="@drawable/ic_lock_24dp"
                android:drawablePadding="@dimen/s_spacing"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSignin"
                style="@style/list_item_defined_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/s_height"
                android:alpha="0.5"
                android:background="@drawable/btn_filled_primary_color"
                android:onClick="doLogin"
                android:text="@string/signin"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/s_spacing"
                android:layout_marginTop="@dimen/m_spacing"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/secondary_text_color" />

                <TextView
                    android:id="@+id/text_view_forgot_password_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>